# chat2

./: .replit  main.py  pyproject.toml
static/css/: style.css
static/js/: chat.js
templates/: base.html  chat.html  login.html  register.html
