[tool.poetry]
name = "secure-messenger"
version = "0.1.0"
description = "A simple encrypted messaging app."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Flask-SocketIO = "^5.3.6"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.0"
werkzeug = "^3.0.1"
eventlet = "^0.33.3"  # Важно для работы SocketIO на Replit

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
